<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, WidgetBarActivity!</string>
    <string name="app_name">WidgetBar</string>
    <string name="perm_write">Read settings</string>
    <string name="perm_read">Write settings</string>
    <string name="select_widget_btn">Select Widget</string>
    <string name="show_widgetbar">Show</string>
    <string name="hide_widgetbar">Hide</string>
    <string name="left_btn">Left</string>
    <string name="right_btn">Right</string>
    <string name="error_text">Error on showing Widget!</string>

</resources>
